# innablr-challenge

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  ci.yml  docker-ci.yml  docker.yml  rust.yml  test.yml
src/: main.rs  tests.rs
